# kikoeru

./: .gitignore  README.md  analysis_options.yaml  build.bat  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: vs_code.json
android/app/: build.gradle  build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/api/: Request.dart  RequestPage.dart
lib/behavior/: SharedPreferences.dart  theme.dart
lib/class/: Work.dart  asmr.dart  workInfo.dart
lib/config/: AudioProvider.dart  ThemeProvider.dart
lib/functions/: CardCalc.dart  PageBehavior.dart  getLeadintg.dart
lib/pages/: All.dart  DefaultPages.dart  EntryPage.dart  FavoritePage.dart  LoginPage.dart  MyHomePage.dart  Popular.dart  PopularWork.dart  Recommand.dart  RecommandWork.dart  SearchPage.dart  Work.dart  allWorks.dart
lib/utils/: CardCalc.dart  httpBase.dart
lib/widget/: AudioPlayerWidget.dart  BaseWorkPage.dart  DrawerWidget.dart  drawer.dart  getAllWorkCard.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs
rust/src/api/requests/: base.rs  interface.rs  mod.rs
rust/src/api/requests/config/: err.rs  mod.rs  types.rs  utils.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  (+1 more)
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+172 files in other folders)
