[package]
name = "rust_lib_kikoeru"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
rand = "0.9.2"
reqwest = { version = "0.12.8", features = ["cookies", "json"] }
serde_json = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
